--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    apply from: 'deps.gradle'
-    apply from: 'configs.gradle'
-
     ext.composeVersion = "1.3.2"
     ext.navigationVersion = "2.5.3"
 
@@ -17,9 +14,9 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-serialization:1.7.10"
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.42'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3"
-        classpath deps.spotless
-        classpath deps.kotlin_coveralls_plugin
-        classpath deps.junit5_plugin
+        classpath "com.diffplug.spotless:spotless-plugin-gradle:5.11.0"
+        classpath "gradle.plugin.org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.12.0"
+        classpath "de.mannodermaus.gradle.plugins:android-junit5:1.8.2.1"
         classpath "com.android.tools.build:gradle:7.1.3"
     }
 }
@@ -52,7 +49,7 @@ subprojects {
     spotless {
         kotlin {
             target '**/*.kt'
-            ktlint(versions.ktlint).userData(['indent_size': '2', 'continuation_indent_size': '2'])
+            ktlint("0.41.0").userData(['indent_size': '2', 'continuation_indent_size': '2'])
             ktfmt().googleStyle()
             licenseHeaderFile "${project.rootProject.projectDir}/license-header.txt"
         }
@@ -75,7 +72,7 @@ subprojects {
         resolutionStrategy {
             eachDependency { details ->
                 if ('org.jacoco' == details.requested.group) {
-                    details.useVersion versions.jacoco_tool
+                    details.useVersion "0.8.7"
                 }
             }
         }
