--- a/android/geowidget/build.gradle
+++ b/android/geowidget/build.gradle
@@ -14,15 +14,15 @@ apply from: '../properties.gradle'
 apply from: '../jacoco.gradle'
 
 android {
-    compileSdkVersion sdk_versions.compile_sdk
+    compileSdkVersion 33
 
     dataBinding {
         enabled true
     }
 
     defaultConfig {
-        minSdkVersion sdk_versions.min_sdk
-        targetSdkVersion sdk_versions.target_sdk
+        minSdkVersion 26
+        targetSdkVersion 33
         buildConfigField("String", 'MAPBOX_SDK_TOKEN', "\"${MAPBOX_SDK_TOKEN}\"")
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -104,44 +104,52 @@ configurations {
 }
 
 dependencies {
+    coreLibraryDesugaring(libs.core.desugar)
 
-    coreLibraryDesugaring deps.desugar
     implementation(project(":engine"))
-    implementation (deps.kujaku_library) {
+    implementation(libs.core.ktx)
+    implementation(libs.appcompat)
+    implementation(libs.material)
+    implementation(libs.dagger.hilt.android)
+    implementation(libs.hilt.work)
+    implementation(libs.mapbox.sdk.turf)
+    implementation(libs.kujaku.library) {
         transitive = true
         exclude group: 'stax', module: 'stax-api'
     }
-    implementation deps.mapbox_sdk_turf
 
-    //Hilt - Dependency Injection
-    implementation "com.google.dagger:hilt-android:$hiltVersion"
-    implementation "androidx.hilt:hilt-work:$hiltWorkerVersion"
-    kapt "androidx.hilt:hilt-compiler:$hiltWorkerVersion"
-    kapt "com.google.dagger:hilt-compiler:$hiltVersion"
+    //Annotation processors
+    kapt(libs.hilt.compiler)
+    kapt(libs.dagger.hilt.compiler)
 
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.activity:activity-ktx:1.6.1'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    testRuntimeOnly(libs.junit.jupiter.engine)
+    testRuntimeOnly(libs.junit.vintage.engine)
 
-    testImplementation deps.junit5_api
-    testRuntimeOnly deps.junit5_engine
-    testRuntimeOnly deps.junit5_engine_vintage
-    testImplementation deps.robolectric
-    testImplementation deps.atsl.ext_junit
-    testImplementation deps.atsl.ext_junit_ktx
-    testImplementation deps.coroutines.test
-    testImplementation deps.androidx.core_test
-    testImplementation deps.mockk
+    // Unit test dependencies
+    testImplementation(libs.junit.jupiter.api)
+    testImplementation(libs.robolectric)
+    testImplementation(libs.junit)
+    testImplementation(libs.junit.ktx)
+    testImplementation(libs.kotlinx.coroutines.test)
+    testImplementation(libs.core.testing)
+    testImplementation(libs.mockk)
+    testImplementation(libs.kotlinx.coroutines.test)
+    testImplementation(libs.hilt.android.testing)
+    testImplementation(libs.navigation.testing)
 
-    // Hilt test dependencies
-    testImplementation("com.google.dagger:hilt-android-testing:$hiltVersion")
-    kaptTest("com.google.dagger:hilt-android-compiler:$hiltVersion")
-    androidTestImplementation "com.google.dagger:hilt-android-testing:$hiltVersion"
-    kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hiltVersion"
+    // To run only on debug builds
+    debugImplementation(libs.ui.test.manifest)
+    debugImplementation(libs.fragment.testing)
 
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation deps.mockk_android
+    //Annotation processors for test
+    kaptTest(libs.hilt.android.compiler)
+    kaptAndroidTest(libs.hilt.android.compiler)
+
+    //Android test dependencies
+    androidTestImplementation(libs.hilt.android.testing)
+    androidTestImplementation(libs.junit.ktx)
+    androidTestImplementation(libs.espresso.core)
+    androidTestImplementation(libs.ui.test.junit4)
+    androidTestImplementation(libs.mockk.android)
+    androidTestImplementation(libs.core.ktx.test)
 }
