--- a/android/engine/src/main/AndroidManifest.xml
+++ b/android/engine/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
 
         <activity
             android:name=".ui.appsetting.AppSettingActivity"
-            android:exported="true">
+            android:exported="true"
+            android:clearTaskOnLaunch="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
