Invalidate cache on form completion (#2244)
* Invalidate household cache on remove family form completion

* Add refreshContent field to questionnaire configs for family and patient removal forms

* Filter active groups when counting hoseholds

* Remove debug logging

* Remove debug logs

* Run spotless Apply

* Code cleanup

* add some annotations

* Add unit tests
Code cleanup

* Run spotless Apply

* Add tests

* Code cleanup: call refresh live data post value directly

* more config tests

---------

Co-authored-by: Peter Lubell-Doughtie <peter@ona.io>

--- a/android/quest/src/main/assets/configs/app/profiles/household_profile_config.json
+++ b/android/quest/src/main/assets/configs/app/profiles/household_profile_config.json
@@ -644,7 +644,8 @@
               "title": "Remove household",
               "message": "Removing @{familyName} will remove their entire health record from your device. This action can’t be undone.",
               "actionButtonText": "Remove household"
-            }
+            },
+            "refreshContent": true
           }
         }
       ]
