--- a/android/quest/src/main/assets/configs/app/profiles/default_profile_config.json
+++ b/android/quest/src/main/assets/configs/app/profiles/default_profile_config.json
@@ -2941,7 +2941,8 @@
                 "key": "familyLogicalId",
                 "value": "@{familyLogicalId}"
               }
-            ]
+            ],
+            "refreshContent": true
           }
         }
       ]
