--- a/android/quest/src/main/assets/configs/app/profiles/default_profile_config.json
+++ b/android/quest/src/main/assets/configs/app/profiles/default_profile_config.json
@@ -1231,7 +1231,7 @@
                   "id": "availableTasks",
                   "relatedResourceId": "availableTasks",
                   "resourceType": "Task",
-                  "conditionalFhirPathExpression": "Task.groupIdentifier.value = '0_d' and Task.executionPeriod.start > today() + 7 days"
+                  "conditionalFhirPathExpression": "Task.groupIdentifier.value = '0_d' and Task.executionPeriod.start > today() - 7 days"
                 }
               ],
               "emptyList": {
@@ -1351,7 +1351,7 @@
                   "id": "availableTasks",
                   "relatedResourceId": "availableTasks",
                   "resourceType": "Task",
-                  "conditionalFhirPathExpression": "Task.groupIdentifier.value = '6_wk' and Task.executionPeriod.start > today() + 7 days"
+                  "conditionalFhirPathExpression": "Task.groupIdentifier.value = '6_wk' and Task.executionPeriod.start > today() - 7 days"
                 }
               ],
               "emptyList": {
@@ -1471,7 +1471,7 @@
                   "id": "availableTasks",
                   "relatedResourceId": "availableTasks",
                   "resourceType": "Task",
-                  "conditionalFhirPathExpression": "Task.groupIdentifier.value = '10_wk' and Task.executionPeriod.start > today() + 7 days"
+                  "conditionalFhirPathExpression": "Task.groupIdentifier.value = '10_wk' and Task.executionPeriod.start > today() - 7 days"
                 }
               ],
               "emptyList": {
@@ -1591,7 +1591,7 @@
                   "id": "availableTasks",
                   "relatedResourceId": "availableTasks",
                   "resourceType": "Task",
-                  "conditionalFhirPathExpression": "Task.groupIdentifier.value = '14_wk' and Task.executionPeriod.start > today() + 7 days"
+                  "conditionalFhirPathExpression": "Task.groupIdentifier.value = '14_wk' and Task.executionPeriod.start > today() - 7 days"
                 }
               ],
               "emptyList": {
@@ -1711,7 +1711,7 @@
                   "id": "availableTasks",
                   "relatedResourceId": "availableTasks",
                   "resourceType": "Task",
-                  "conditionalFhirPathExpression": "Task.groupIdentifier.value = '9_mo' and Task.executionPeriod.start > today() + 7 days"
+                  "conditionalFhirPathExpression": "Task.groupIdentifier.value = '9_mo' and Task.executionPeriod.start > today() - 7 days"
                 }
               ],
               "emptyList": {
@@ -1831,7 +1831,7 @@
                   "id": "availableTasks",
                   "relatedResourceId": "availableTasks",
                   "resourceType": "Task",
-                  "conditionalFhirPathExpression": "Task.groupIdentifier.value = '15_mo' and Task.executionPeriod.start > today() + 7 days"
+                  "conditionalFhirPathExpression": "Task.groupIdentifier.value = '15_mo' and Task.executionPeriod.start > today() - 7 days"
                 }
               ],
               "emptyList": {
@@ -1951,7 +1951,7 @@
                   "id": "availableTasks",
                   "relatedResourceId": "availableTasks",
                   "resourceType": "Task",
-                  "conditionalFhirPathExpression": "Task.groupIdentifier.value = '108_mo' and Task.executionPeriod.start > today() + 7 days"
+                  "conditionalFhirPathExpression": "Task.groupIdentifier.value = '108_mo' and Task.executionPeriod.start > today() - 7 days"
                 }
               ],
               "emptyList": {
@@ -2071,7 +2071,7 @@
                   "id": "availableTasks",
                   "relatedResourceId": "availableTasks",
                   "resourceType": "Task",
-                  "conditionalFhirPathExpression": "Task.groupIdentifier.value = '114_wk' and Task.executionPeriod.start > today() + 7 days"
+                  "conditionalFhirPathExpression": "Task.groupIdentifier.value = '114_wk' and Task.executionPeriod.start > today() - 7 days"
                 }
               ],
               "emptyList": {
