--- a/android/quest/build.gradle
+++ b/android/quest/build.gradle
@@ -8,6 +8,13 @@ plugins {
     id 'jacoco'
     id 'dagger.hilt.android.plugin'
     id 'androidx.navigation.safeargs'
+    id "org.sonarqube" version "3.5.0.2730"
+}
+
+sonar {
+    properties {
+        property "sonar.projectKey", "fhircore"
+    }
 }
 
 apply from: '../jacoco.gradle'
