--- a/android/quest/build.gradle
+++ b/android/quest/build.gradle
@@ -186,6 +186,7 @@ dependencies {
     implementation 'androidx.ui:ui-foundation:0.1.0-dev03'
     implementation deps.lifecycle.viewmodel
     implementation('org.smartregister:p2p-lib:0.3.0-SNAPSHOT')
+    implementation 'org.smartregister:fhir-common-utils:0.0.6-SNAPSHOT'
     implementation deps.accompanist.swiperefresh
 
     implementation 'com.github.anrwatchdog:anrwatchdog:1.4.0'
