--- a/android/quest/build.gradle
+++ b/android/quest/build.gradle
@@ -14,6 +14,7 @@ plugins {
 sonar {
     properties {
         property "sonar.projectKey", "fhircore"
+        property "sonar.androidLint.reportPaths","${project.buildDir}/reports/lint-results-questDebug.xml"
     }
 }
 
