Use configured unique id as key on rules factory facts map
Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

--- a/android/quest/src/main/assets/configs/app/registers/household_register_config.json
+++ b/android/quest/src/main/assets/configs/app/registers/household_register_config.json
@@ -45,6 +45,12 @@
         "fhirPathExpression": "Group.member.entity",
         "relatedResources": [
           {
+            "id": "hivCondition",
+            "resource": "Condition",
+            "searchParameter": "subject"
+          },
+          {
+            "id": "ancCondition",
             "resource": "Condition",
             "searchParameter": "subject"
           },
