Refactor RepositoryResourceData sealed class
Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

--- a/android/quest/src/main/assets/configs/app/registers/household_register_config.json
+++ b/android/quest/src/main/assets/configs/app/registers/household_register_config.json
@@ -45,17 +45,8 @@
         "fhirPathExpression": "Group.member.entity",
         "relatedResources": [
           {
-            "id": "hivCondition",
+            "id": "patientConditions",
             "resource": "Condition",
-            "searchParameter": "subject"
-          },
-          {
-            "id": "ancCondition",
-            "resource": "Condition",
-            "searchParameter": "subject"
-          },
-          {
-            "resource": "CarePlan",
             "searchParameter": "subject"
           },
           {
