--- a/android/quest/src/main/assets/configs/app/profiles/household_profile_config.json
+++ b/android/quest/src/main/assets/configs/app/profiles/household_profile_config.json
@@ -373,6 +373,7 @@
               {
                 "name": "showMemberTasks",
                 "condition": "true",
+                "priority": 2,
                 "actions": [
                   "data.put('showMemberTasks', data.get('patientActive') == 'true' && size(Task) > 0)"
                 ]
