--- a/android/quest/src/main/assets/configs/app/profiles/other_registers_profile_config.json
+++ b/android/quest/src/main/assets/configs/app/profiles/other_registers_profile_config.json
@@ -915,6 +915,7 @@
               "resources": [
                 {
                   "id": "tasks",
+                  "relatedResourceId": "Task",
                   "resourceType": "Task"
                 }
               ],
