Refactor nested resources search implementation to use forward include
Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

--- a/android/quest/src/main/assets/configs/app/profiles/household_profile_config.json
+++ b/android/quest/src/main/assets/configs/app/profiles/household_profile_config.json
@@ -35,7 +35,8 @@
     "relatedResources": [
       {
         "resource": "Patient",
-        "fhirPathExpression": "Group.member.entity",
+        "isRevInclude": false,
+        "searchParameter": "member",
         "relatedResources": [
           {
             "resource": "Condition",
