Added mPower Config

--- a/android/quest/build.gradle
+++ b/android/quest/build.gradle
@@ -140,6 +140,12 @@ android {
             getIsDefault().set(true)
         }
 
+        mpower {
+            dimension "apps"
+            applicationIdSuffix ".mpower"
+            versionNameSuffix "-mpower"
+        }
+
         ecbis {
             dimension "apps"
             applicationIdSuffix ".ecbis"
