--- a/android/quest/src/main/assets/configs/app/composition_config.json
+++ b/android/quest/src/main/assets/configs/app/composition_config.json
@@ -16,7 +16,7 @@
     ]
   },
   "date": "2022-09-16",
-  "title": "eCBIS CHA",
+  "title": "mPower",
   "confidentiality": "L",
   "section": [
     {
@@ -252,7 +252,7 @@
         {
           "title": "Add Family Member",
           "focus": {
-            "reference": "Questionnaire/e5155788-8831-4916-a3f5-486915ce34b2",
+            "reference": "Questionnaire/252",
             "identifier": {
               "value": "family-member-registration"
             }
@@ -272,7 +272,7 @@
         {
           "title": "Add Family",
           "focus": {
-            "reference": "Questionnaire/f210a832-857f-49e6-93f5-399eec4f4edb",
+            "reference": "Questionnaire/253",
             "identifier": {
               "value": "family-registration"
             }
