--- a/android/engine/build.gradle
+++ b/android/engine/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'org.jetbrains.kotlin.plugin.serialization'
-    id 'de.mannodermaus.android-junit5'
+    id 'de.mannodermaus.android-junit5' version '1.9.3.0'
     id 'jacoco'
     id 'dagger.hilt.android.plugin'
     id 'org.jetbrains.kotlin.android'
