--- a/android/quest/build.gradle
+++ b/android/quest/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'de.mannodermaus.android-junit5'
+    id 'de.mannodermaus.android-junit5' version '1.9.3.0'
     id 'org.jetbrains.dokka'
     id 'org.jetbrains.kotlin.plugin.serialization'
     id 'jacoco'
